# scaphandre

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-run.sh  setup.sh
.cargo/: config.toml
.github/workflows/: build-and-test.yml  docker-release.yml
docker-compose/: docker-compose-dev.yaml  docker-compose.yaml
docker-compose/dashboards/: sample-dashboard.json
docker-compose/grafana/: sample-dashboard.json
docker-compose/prom/: prometheus.yml
docker-compose/prom-dev/: prometheus.yml
docs/: approach.md  c-state.md  changes.md  fixes.md  json.md  latest.md  main.txt  overview.md  status.md  task.md
docs/thesis/: architecture.md  task.md
docs/thesis/diagrams/: contribution_architecture.py  contribution_data_flow.py  contribution_ebpf.py  contribution_idle_activation.py  contribution_power_attribution.py
scaphandre/: Cargo.toml  build.rs
scaphandre-common/: Cargo.toml
scaphandre-common/src/: lib.rs
scaphandre-ebpf/: Cargo.toml
scaphandre-ebpf/src/: lib.rs  main.rs  vmlinux.rs
scaphandre/src/: bpf.rs  lib.rs  main.rs
scaphandre/src/exporters/: json.rs  mod.rs
scaphandre/src/sensors/: mod.rs  powercap_rapl.rs  units.rs  utils.rs
src/exporters/: json.rs  mod.rs
src/sensors/: mod.rs  powercap_rapl.rs  units.rs  utils.rs
