[package]
name = "scaphandre-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
scaphandre-common = { path = "../scaphandre-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "scaphandre"
path = "src/main.rs"
